Enable OPFS backend for WasmFS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,8 @@ else(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -gsource-map")
 endif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 
+set(CMAKE_EXECUTABLE_SUFFIX ".html")
+
 # Test whether -Wthread-safety is available. See
 # https://clang.llvm.org/docs/ThreadSafetyAnalysis.html
 include(CheckCXXCompilerFlag)
@@ -291,7 +293,7 @@ add_executable(leveldbutil
   "db/leveldbutil.cc"
 )
 target_link_libraries(leveldbutil leveldb)
-target_link_options(leveldbutil PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH)
+target_link_options(leveldbutil PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
 
 add_executable(leveldbwasm)
 target_sources(leveldbwasm
@@ -362,7 +364,7 @@ if(LEVELDB_BUILD_TESTS)
     )
   endif(NOT BUILD_SHARED_LIBS)
   target_link_libraries(leveldb_tests leveldb gmock gtest gtest_main)
-  target_link_options(leveldb_tests PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH)
+  target_link_options(leveldb_tests PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
   target_compile_definitions(leveldb_tests
     PRIVATE
       ${LEVELDB_PLATFORM_NAME}=1
@@ -389,7 +391,7 @@ if(LEVELDB_BUILD_TESTS)
         "${test_file}"
     )
     target_link_libraries("${test_target_name}" leveldb gmock gtest)
-    target_link_options("${test_target_name}" PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH)
+    target_link_options("${test_target_name}" PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD --source-map-base=http://localhost:5000/build/)
     target_compile_definitions("${test_target_name}"
       PRIVATE
         ${LEVELDB_PLATFORM_NAME}=1
@@ -438,7 +440,7 @@ if(LEVELDB_BUILD_BENCHMARKS)
         "${bench_file}"
     )
     target_link_libraries("${bench_target_name}" leveldb gmock gtest benchmark)
-    target_link_options("${bench_target_name}" PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH)
+    target_link_options("${bench_target_name}" PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
     target_compile_definitions("${bench_target_name}"
       PRIVATE
         ${LEVELDB_PLATFORM_NAME}=1
@@ -459,7 +461,7 @@ if(LEVELDB_BUILD_BENCHMARKS)
   if(HAVE_SQLITE3)
     leveldb_benchmark("benchmarks/db_bench_sqlite3.cc")
     target_link_libraries(db_bench_sqlite3 sqlite3)
-    target_link_options(db_bench_sqlite3 PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH)
+    target_link_options(db_bench_sqlite3 PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
   endif(HAVE_SQLITE3)
 
   # check_library_exists is insufficient here because the library names have
@@ -480,7 +482,7 @@ int main() {
   if(HAVE_KYOTOCABINET)
     leveldb_benchmark("benchmarks/db_bench_tree_db.cc")
     target_link_libraries(db_bench_tree_db kyotocabinet)
-    target_link_options(db_bench_tree_db PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH)
+    target_link_options(db_bench_tree_db PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
   endif(HAVE_KYOTOCABINET)
 endif(LEVELDB_BUILD_BENCHMARKS)
 
