use variable to set target_link_options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,14 +75,22 @@ else(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   string(REGEX REPLACE "-frtti" "" CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-rtti")
 
-  # Enable pthreads
+  # Enable pthreads.
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
 
-  # Enable debug information
+  # Enable debug information.
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -gsource-map")
 endif(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
 
+# Create HTML executables for WASM to run from a browser.
 set(CMAKE_EXECUTABLE_SUFFIX ".html")
+
+# Enable the OPFS by using WasmFS in a worker.
+set(WASM_FLAGS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
+set(WASM_DEBUG_FLAGS -sASSERTIONS --source-map-base=http://localhost:5000/build/)
+# Use PRIVATE link options to use these flags on specific executables, rather
+# than globally, where they would be unused in third_party targets.
+set(PRIVATE_TARGET_LINK_OPTIONS ${WASM_FLAGS} ${WASM_DEBUG_FLAGS})
 
 # Test whether -Wthread-safety is available. See
 # https://clang.llvm.org/docs/ThreadSafetyAnalysis.html
@@ -293,7 +301,7 @@ add_executable(leveldbutil
   "db/leveldbutil.cc"
 )
 target_link_libraries(leveldbutil leveldb)
-target_link_options(leveldbutil PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
+target_link_options(leveldbutil PRIVATE ${PRIVATE_TARGET_LINK_OPTIONS})
 
 add_executable(leveldbwasm)
 target_sources(leveldbwasm
@@ -364,7 +372,7 @@ if(LEVELDB_BUILD_TESTS)
     )
   endif(NOT BUILD_SHARED_LIBS)
   target_link_libraries(leveldb_tests leveldb gmock gtest gtest_main)
-  target_link_options(leveldb_tests PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
+  target_link_options(leveldb_tests PRIVATE ${PRIVATE_TARGET_LINK_OPTIONS})
   target_compile_definitions(leveldb_tests
     PRIVATE
       ${LEVELDB_PLATFORM_NAME}=1
@@ -391,7 +399,7 @@ if(LEVELDB_BUILD_TESTS)
         "${test_file}"
     )
     target_link_libraries("${test_target_name}" leveldb gmock gtest)
-    target_link_options("${test_target_name}" PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD --source-map-base=http://localhost:5000/build/)
+    target_link_options("${test_target_name}" PRIVATE ${PRIVATE_TARGET_LINK_OPTIONS})
     target_compile_definitions("${test_target_name}"
       PRIVATE
         ${LEVELDB_PLATFORM_NAME}=1
@@ -440,7 +448,7 @@ if(LEVELDB_BUILD_BENCHMARKS)
         "${bench_file}"
     )
     target_link_libraries("${bench_target_name}" leveldb gmock gtest benchmark)
-    target_link_options("${bench_target_name}" PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
+    target_link_options("${bench_target_name}" PRIVATE ${PRIVATE_TARGET_LINK_OPTIONS})
     target_compile_definitions("${bench_target_name}"
       PRIVATE
         ${LEVELDB_PLATFORM_NAME}=1
@@ -461,7 +469,7 @@ if(LEVELDB_BUILD_BENCHMARKS)
   if(HAVE_SQLITE3)
     leveldb_benchmark("benchmarks/db_bench_sqlite3.cc")
     target_link_libraries(db_bench_sqlite3 sqlite3)
-    target_link_options(db_bench_sqlite3 PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
+    target_link_options(db_bench_sqlite3 PRIVATE ${PRIVATE_TARGET_LINK_OPTIONS})
   endif(HAVE_SQLITE3)
 
   # check_library_exists is insufficient here because the library names have
@@ -482,7 +490,7 @@ int main() {
   if(HAVE_KYOTOCABINET)
     leveldb_benchmark("benchmarks/db_bench_tree_db.cc")
     target_link_libraries(db_bench_tree_db kyotocabinet)
-    target_link_options(db_bench_tree_db PRIVATE -sASSERTIONS -sALLOW_MEMORY_GROWTH -sWASMFS -sPROXY_TO_PTHREAD)
+    target_link_options(db_bench_tree_db PRIVATE ${PRIVATE_TARGET_LINK_OPTIONS})
   endif(HAVE_KYOTOCABINET)
 endif(LEVELDB_BUILD_BENCHMARKS)
 
