--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -336,7 +336,7 @@ target_sources(leveldbwasm
     "wasm/idl/status.h"
 )
 target_link_options(leveldbwasm
-  PUBLIC --post-js glue.js -sMODULARIZE -sEXPORT_ES6 -sEXPORTED_FUNCTIONS=_malloc -sALLOW_MEMORY_GROWTH -sWASMFS
+  PUBLIC --post-js glue.js -sMODULARIZE -sEXPORT_ES6 -sEXPORTED_FUNCTIONS=_malloc -sALLOW_MEMORY_GROWTH -sPTHREAD_POOL_SIZE=100 -sWASMFS -sASSERTIONS --source-map-base=http://localhost:8040/ -g -gsource-map
 )
 target_link_libraries(leveldbwasm leveldb)
 
