--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -339,6 +339,7 @@ target_sources(leveldbwasm
     "wasm/idl/status.cc"
     "wasm/idl/status.h"
 )
+target_include_directories(leveldbwasm PRIVATE ${PROJECT_BINARY_DIR})
 target_link_options(leveldbwasm
   PUBLIC --post-js glue.js -sMODULARIZE -sEXPORT_ES6 -sEXPORTED_FUNCTIONS=_malloc -sALLOW_MEMORY_GROWTH -sPTHREAD_POOL_SIZE=100 -sWASMFS -sASSERTIONS --source-map-base=http://localhost:8040/ -g -gsource-map
 )
